// Vitest Snapshot v1

exports[`lib/fitness > display fitness breakdown and stats 1`] = `
"**2.24%** complete
**14.29** / 637 miles
---
Needed to be on track today
- **4.9** miles
Needed to be on track this week
- **13.63** miles / 5 days
- **2.73** miles per day
---
Stats
- **2138** calories burned
- **5:11:25** total time
- **8** total workouts
---
Updated Jan 11, 12:00am
"
`;

exports[`lib/fitness > handles Sunday when ahead 1`] = `
"**2.93%** complete
**18.64** / 637 miles
---
You're **2.94** miles ahead for today!
You're **2.94** miles ahead for the week!
---
Stats
- **2138** calories burned
- **5:11:25** total time
- **8** total workouts
---
Updated Jan 9, 12:00am
"
`;

exports[`lib/fitness > handles Sunday when behind 1`] = `
"**1.95%** complete
**12.43** / 637 miles
---
Needed to be on track today
- **3.28** miles
Needed to be on track this week
- **3.28** miles today
---
Stats
- **2138** calories burned
- **5:11:25** total time
- **8** total workouts
---
Updated Jan 9, 12:00am
"
`;

exports[`lib/fitness > handles pluralization when ahead for today and for the week 1`] = `
"**2.54%** complete
**16.2** / 637 miles
---
You're **0.49** miles ahead for today!
You're **0.49** miles ahead for the week!
---
Stats
- **2138** calories burned
- **5:11:25** total time
- **8** total workouts
---
Updated Jan 9, 12:00am
"
`;

exports[`lib/fitness > handles pluralization when behind for the week 1`] = `
"**3.95%** complete
**25.18** / 637 miles
---
You're **5.98** miles ahead for today!
Needed to be on track this week
- **2.74** miles / 5 days
- **0.55** miles per day
---
Stats
- **2138** calories burned
- **5:11:25** total time
- **8** total workouts
---
Updated Jan 11, 12:00am
"
`;

exports[`lib/fitness > handles pluralization when behind for the week per day 1`] = `
"**3.33%** complete
**21.19** / 637 miles
---
You're **1.99** miles ahead for today!
Needed to be on track this week
- **6.73** miles / 5 days
- **1.35** miles per day
---
Stats
- **2138** calories burned
- **5:11:25** total time
- **8** total workouts
---
Updated Jan 11, 12:00am
"
`;

exports[`lib/fitness > handles pluralization when behind for today 1`] = `
"**1.76%** complete
**11.22** / 637 miles
---
Needed to be on track today
- **2.74** miles
Needed to be on track this week
- **4.49** miles / 1 day
- **4.49** miles per day
---
Stats
- **2138** calories burned
- **5:11:25** total time
- **8** total workouts
---
Updated Jan 8, 12:00am
"
`;

exports[`lib/fitness > handles stats not being defined 1`] = `
"**1.95%** complete
**12.43** / 637 miles
---
Needed to be on track today
- **6.77** miles
Needed to be on track this week
- **15.49** miles / 5 days
- **3.1** miles per day
---
Stats
- **<unknown>** calories burned
- **<unknown>** total time
- **<unknown>** total workouts
---
Updated Jan 11, 12:00am
"
`;

exports[`lib/fitness > shows a different message if on track for the week 1`] = `
"**2.83%** complete
**18.02** / 637 miles
---
You're **7.55** miles ahead for today!
You're **2.32** miles ahead for the week!
---
Stats
- **2138** calories burned
- **5:11:25** total time
- **8** total workouts
---
Updated Jan 6, 12:00am
"
`;

exports[`lib/fitness > shows a different message if on track for today 1`] = `
"**3.12%** complete
**19.88** / 637 miles
---
You're **0.69** miles ahead for today!
Needed to be on track this week
- **8.04** miles / 5 days
- **1.61** miles per day
---
Stats
- **2138** calories burned
- **5:11:25** total time
- **8** total workouts
---
Updated Jan 11, 12:00am
"
`;
